syntax="proto3";

package example_for_cpp;
option java_package="com.baidu.brpc.example.standard.proto3";
option java_outer_classname="Echo3";
option cc_generic_services = true;

message EchoRequest {
     string message = 1;
};

message EchoResponse {
     string message = 1;
};

service EchoService {
    rpc Echo(EchoRequest) returns (EchoResponse);
};